[gd_scene load_steps=21 format=3 uid="uid://bf621dr8yg6w1"]

[ext_resource type="Script" uid="uid://da5f4usdqa68p" path="res://main.gd" id="1_5vw27"]
[ext_resource type="PackedScene" uid="uid://ducva2m371pg4" path="res://input_loop.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://celdvn1ay71o7" path="res://item_sfx.tscn" id="1_lquwl"]
[ext_resource type="AudioStream" uid="uid://dxii5unq14ooq" path="res://Assets/Mix - Musicas Deivid.mp3" id="2_0xm2m"]
[ext_resource type="PackedScene" uid="uid://c17h072sk6mjb" path="res://Elements/item_playlist/item_playlist.tscn" id="2_7mycd"]
[ext_resource type="PackedScene" uid="uid://vgbgied4rw8j" path="res://item_transicao.tscn" id="3_7mycd"]
[ext_resource type="AudioStream" uid="uid://c0e70cjlssf81" path="res://Assets/TENSAO.mp3" id="4_272bh"]
[ext_resource type="Script" uid="uid://dtu15xq5fwxss" path="res://main_player.gd" id="7_272bh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7mycd"]
bg_color = Color(0.11, 0.11, 0.11, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_272bh"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_bottom = 3
border_color = Color(0.09, 0.09, 0.09, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_h2yge"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_glv2v"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_uu6xs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h2yge"]
content_margin_bottom = 8.0
bg_color = Color(1, 0.988351, 0.986536, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ig7tw"]
bg_color = Color(0.54, 1, 0.586, 1)

[sub_resource type="Theme" id="Theme_r0du0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7mycd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cm0pq"]
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5vw27"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="AudioStreamInteractive" id="AudioStreamInteractive_1bvp3"]
clip_count = 3
clip_0/name = &"Tensao"
clip_0/stream = ExtResource("4_272bh")
clip_0/auto_advance = 0
clip_1/name = &""
clip_1/auto_advance = 0
clip_2/name = &"Mix - Musicas Deivid"
clip_2/stream = ExtResource("2_0xm2m")
clip_2/auto_advance = 0
_transitions = {
Vector2i(-1, -1): {
"fade_beats": 1.0,
"fade_mode": 3,
"from_time": 0,
"to_time": 0
}
}

[node name="Main" type="Node"]
script = ExtResource("1_5vw27")

[node name="Fundo" type="PanelContainer" parent="."]
offset_right = 1152.0
offset_bottom = 648.0

[node name="Margem" type="MarginContainer" parent="Fundo"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Coluna" type="VBoxContainer" parent="Fundo/Margem"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Listas" type="HBoxContainer" parent="Fundo/Margem/Coluna"]
layout_mode = 2
size_flags_vertical = 3

[node name="FundoSFX" type="PanelContainer" parent="Fundo/Margem/Coluna/Listas"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Margem" type="MarginContainer" parent="Fundo/Margem/Coluna/Listas/FundoSFX"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Coluna" type="VBoxContainer" parent="Fundo/Margem/Coluna/Listas/FundoSFX/Margem"]
layout_mode = 2

[node name="Scroll" type="ScrollContainer" parent="Fundo/Margem/Coluna/Listas/FundoSFX/Margem/Coluna"]
layout_mode = 2
size_flags_vertical = 3

[node name="ListaSFX" type="VBoxContainer" parent="Fundo/Margem/Coluna/Listas/FundoSFX/Margem/Coluna/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemSFX" parent="Fundo/Margem/Coluna/Listas/FundoSFX/Margem/Coluna/Scroll/ListaSFX" instance=ExtResource("1_lquwl")]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="Fundo/Margem/Coluna/Listas/FundoSFX/Margem/Coluna"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_7mycd")

[node name="Acoes" type="HBoxContainer" parent="Fundo/Margem/Coluna/Listas/FundoSFX/Margem/Coluna"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Nota" type="OptionButton" parent="Fundo/Margem/Coluna/Listas/FundoSFX/Margem/Coluna/Acoes"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
selected = 0
item_count = 12
popup/item_0/text = "C"
popup/item_0/id = 0
popup/item_1/text = "C#"
popup/item_1/id = 1
popup/item_2/text = "D"
popup/item_2/id = 2
popup/item_3/text = "D#"
popup/item_3/id = 3
popup/item_4/text = "E"
popup/item_4/id = 4
popup/item_5/text = "F"
popup/item_5/id = 5
popup/item_6/text = "F#"
popup/item_6/id = 6
popup/item_7/text = "G"
popup/item_7/id = 7
popup/item_8/text = "G#"
popup/item_8/id = 8
popup/item_9/text = "A"
popup/item_9/id = 9
popup/item_10/text = "A#"
popup/item_10/id = 10
popup/item_11/text = "B"
popup/item_11/id = 11

[node name="NomeSFX" type="Button" parent="Fundo/Margem/Coluna/Listas/FundoSFX/Margem/Coluna/Acoes"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_272bh")

[node name="AdicionarSFX" type="Button" parent="Fundo/Margem/Coluna/Listas/FundoSFX/Margem/Coluna/Acoes"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="Fundo/Margem/Coluna/Listas"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Margem" type="MarginContainer" parent="Fundo/Margem/Coluna/Listas/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Coluna" type="VBoxContainer" parent="Fundo/Margem/Coluna/Listas/PanelContainer2/Margem"]
layout_mode = 2

[node name="Scroll" type="ScrollContainer" parent="Fundo/Margem/Coluna/Listas/PanelContainer2/Margem/Coluna"]
layout_mode = 2
size_flags_vertical = 3

[node name="ListaPlaylist" type="VBoxContainer" parent="Fundo/Margem/Coluna/Listas/PanelContainer2/Margem/Coluna/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemPlaylist" parent="Fundo/Margem/Coluna/Listas/PanelContainer2/Margem/Coluna/Scroll/ListaPlaylist" instance=ExtResource("2_7mycd")]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="Fundo/Margem/Coluna/Listas/PanelContainer2/Margem/Coluna"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_7mycd")

[node name="Acoes" type="HBoxContainer" parent="Fundo/Margem/Coluna/Listas/PanelContainer2/Margem/Coluna"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="NomeMusica" type="Button" parent="Fundo/Margem/Coluna/Listas/PanelContainer2/Margem/Coluna/Acoes"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_272bh")

[node name="AdicionarMusica" type="Button" parent="Fundo/Margem/Coluna/Listas/PanelContainer2/Margem/Coluna/Acoes"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2

[node name="PanelContainer3" type="PanelContainer" parent="Fundo/Margem/Coluna/Listas"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Margem" type="MarginContainer" parent="Fundo/Margem/Coluna/Listas/PanelContainer3"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Coluna" type="VBoxContainer" parent="Fundo/Margem/Coluna/Listas/PanelContainer3/Margem"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Scroll" type="ScrollContainer" parent="Fundo/Margem/Coluna/Listas/PanelContainer3/Margem/Coluna"]
layout_mode = 2
size_flags_vertical = 3

[node name="ListaTransicao" type="VBoxContainer" parent="Fundo/Margem/Coluna/Listas/PanelContainer3/Margem/Coluna/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemTransicao" parent="Fundo/Margem/Coluna/Listas/PanelContainer3/Margem/Coluna/Scroll/ListaTransicao" instance=ExtResource("3_7mycd")]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="Fundo/Margem/Coluna/Listas/PanelContainer3/Margem/Coluna"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_7mycd")

[node name="Acoes" type="HBoxContainer" parent="Fundo/Margem/Coluna/Listas/PanelContainer3/Margem/Coluna"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Button" type="Button" parent="Fundo/Margem/Coluna/Listas/PanelContainer3/Margem/Coluna/Acoes"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2

[node name="Button2" type="Button" parent="Fundo/Margem/Coluna/Listas/PanelContainer3/Margem/Coluna/Acoes"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2

[node name="Button3" type="Button" parent="Fundo/Margem/Coluna/Listas/PanelContainer3/Margem/Coluna/Acoes"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2

[node name="Control" type="Control" parent="Fundo/Margem/Coluna/Listas/PanelContainer3/Margem/Coluna/Acoes"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button4" type="Button" parent="Fundo/Margem/Coluna/Listas/PanelContainer3/Margem/Coluna/Acoes"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2

[node name="Player" type="PanelContainer" parent="Fundo/Margem/Coluna"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="Coluna" type="VBoxContainer" parent="Fundo/Margem/Coluna/Player"]
layout_mode = 2

[node name="TrilhaConteiner" type="MarginContainer" parent="Fundo/Margem/Coluna/Player/Coluna"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Linha" type="HBoxContainer" parent="Fundo/Margem/Coluna/Player/Coluna/TrilhaConteiner"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_constants/separation = 20

[node name="TempoAtual" type="Label" parent="Fundo/Margem/Coluna/Player/Coluna/TrilhaConteiner/Linha"]
layout_mode = 2
text = "00:00:000"

[node name="Control" type="Control" parent="Fundo/Margem/Coluna/Player/Coluna/TrilhaConteiner/Linha"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Trilha" type="HSlider" parent="Fundo/Margem/Coluna/Player/Coluna/TrilhaConteiner/Linha/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
focus_mode = 0
theme_override_icons/grabber = SubResource("CompressedTexture2D_h2yge")
theme_override_icons/grabber_highlight = SubResource("CompressedTexture2D_glv2v")
theme_override_icons/grabber_disabled = SubResource("CompressedTexture2D_uu6xs")
theme_override_styles/slider = SubResource("StyleBoxFlat_h2yge")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_ig7tw")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_ig7tw")
scrollable = false

[node name="Duracao" type="Label" parent="Fundo/Margem/Coluna/Player/Coluna/TrilhaConteiner/Linha"]
layout_mode = 2
text = "00:00:000"

[node name="ControlesContainer" type="MarginContainer" parent="Fundo/Margem/Coluna/Player/Coluna"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Fundo/Margem/Coluna/Player/Coluna/ControlesContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Botoes" type="HBoxContainer" parent="Fundo/Margem/Coluna/Player/Coluna/ControlesContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Play" type="Button" parent="Fundo/Margem/Coluna/Player/Coluna/ControlesContainer/HBoxContainer/Botoes"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme = SubResource("Theme_r0du0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7mycd")
theme_override_styles/normal = SubResource("StyleBoxFlat_cm0pq")

[node name="Stop" type="Button" parent="Fundo/Margem/Coluna/Player/Coluna/ControlesContainer/HBoxContainer/Botoes"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme = SubResource("Theme_r0du0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7mycd")
theme_override_styles/normal = SubResource("StyleBoxFlat_cm0pq")

[node name="Loop" type="Button" parent="Fundo/Margem/Coluna/Player/Coluna/ControlesContainer/HBoxContainer/Botoes"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme = SubResource("Theme_r0du0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7mycd")
theme_override_styles/normal = SubResource("StyleBoxFlat_cm0pq")
toggle_mode = true

[node name="LoopParam" type="HBoxContainer" parent="Fundo/Margem/Coluna/Player/Coluna/ControlesContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LabelLoopIn" type="Button" parent="Fundo/Margem/Coluna/Player/Coluna/ControlesContainer/HBoxContainer/LoopParam"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_7mycd")
theme_override_styles/normal = SubResource("StyleBoxFlat_5vw27")
text = "Loop In"

[node name="InputLoopIn" parent="Fundo/Margem/Coluna/Player/Coluna/ControlesContainer/HBoxContainer/LoopParam" instance=ExtResource("1_ig7tw")]
layout_mode = 2

[node name="LabelLoopOut" type="Button" parent="Fundo/Margem/Coluna/Player/Coluna/ControlesContainer/HBoxContainer/LoopParam"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_7mycd")
theme_override_styles/normal = SubResource("StyleBoxFlat_5vw27")
text = "Loop Out"

[node name="InputLoopOut" parent="Fundo/Margem/Coluna/Player/Coluna/ControlesContainer/HBoxContainer/LoopParam" instance=ExtResource("1_ig7tw")]
layout_mode = 2

[node name="MainPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamInteractive_1bvp3")
script = ExtResource("7_272bh")
